test_final_v2.log
  File "/Users/changchun/Desktop/job_scraper/market_radar_haima_classroom.py", line 1689
    title_selectors = [
    ^
IndentationError: expected an indented block
